src/test/deca/context/valid/created/convFloat2.deca
// Description:
//    test de la conversion entier -> flottant
// Resultats:
//    ok

{
    println(3*0.5);
}