src/test/deca/context/invalid/created/SansObjet/BooleanComparison.deca
// Description:
//    test comparaison booleens
// Resultats:
//    BooleanComparison.deca:7:20: Error: Incompatible types for comparison: boolean < boolean

{
    if ((3 > (6%2)) < true) {
        println("ok");
    }
}